assert-struct/tests/snapshots/multiple_failures__multiple_field_failures.snap
---
source: assert-struct/tests/multiple_failures.rs
expression: message
---
error: assert_struct! failed
  --> assert-struct/tests/multiple_failures_errors/multiple_field_failures.rs:23:14
   |
23 |         age: > 18,
   |              ^^^^ got 17
24 |         email: "alice@example.com",  // Will fail
   |                ^^^^^^^^^^^^^^^^^^^ got "alice@wrong.com"
